code25_all/python/1111227.txt
  File "youtube-dl.py", line 103
    @staticmethod
    ^
SyntaxError: invalid syntax

